# ghinit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
repox/: __init__.py  cli.py  config.py  core.py  templates.py
repox/templates/fastapi/: main.py
repox/templates/flask/: app.py
repox/templates/react/: index.html  package.json
repox/templates/react/src/: main.jsx
tests/: test_cli.py  test_config.py  test_core.py  test_detect.py  test_templates.py
